Opened 9 years ago

Closed 8 years ago

#12672 closed bug (fixed)

[regression] WebPositive site icon in URL bar's background is now the control background instead of white

Reported by: waddlesplash Owned by: looncraz
Priority: blocker Milestone: R1/beta1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Probably another SetViewUIColor problem, although the changes to Web+ look OK so it must be a symptom of a larger issue.

Change History (1)

comment:1 by waddlesplash, 8 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50366.

Note: See TracTickets for help on using tickets.